--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
       - 'docs/**'
     branches:
       - master
+  schedule:
+    - cron: '10 * * * *'
 
 env:
   DLB_BOT_EMAIL: ${{ secrets.DLB_BOT_EMAIL }}
