--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,5 @@ jobs:
       run: npm run prestart
     - name: Commit files
       run: |
-        git add docs
+        git add .
         git diff --quiet && git diff --staged --quiet || (git commit -m "Build operations-dashboard"; git push origin master)
