--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "fetch": "node compilers/fetch.js",
-    "prestart": "node ./compilers/dashboard.js",
+    "prestart": "node ./compilers/screenshots.js && node ./compilers/dashboard.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^17.9.1",
+    "content-frontend": "file:content-frontend",
     "express": "^4.17.1",
-    "content-frontend": "file:content-frontend"
+    "puppeteer": "^3.1.0"
   }
 }
