--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '30 * * * *'
+    - cron: '0 * * * *'
 
 env:
   DLB_BOT_EMAIL: ${{ secrets.DLB_BOT_EMAIL }}
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2-beta
       with:
         node-version: '12.x'
     - name: Setup git
